css/style.css
@import url('reset.css');

/* General styles */

html {
	font-family: 'Oswald', sans-serif;
}

body {
	background-image: url(../img/vertical_cloth.png);
}


h1 {
	font-size: 8em;
	font-weight: bold;
	display: inline;
	line-height: 225px;
}

h3 {
	font-size: 3em;
}

h4 {
	font-size: 2.5em;
}

a {
	text-decoration: none;
	color: black;
}

.column a:hover {
	color: white;
}

footer {
	background: black;
}

address {
	font-size: 1.5em;
	padding-left: 10px;
	padding-top: 10px;
	padding-bottom: 10px;
	color: black;
	text-align: left;
	line-height: 130%;
}

nav {
	text-align: center;
}

nav ul {
	background:black;
}

ul li {
	list-style: none;
	font-size: 2em;
	display: inline-block;
	margin: 0 auto;
	padding: 0 50px;
}

ul a {
	display: inline-block;
	color: white;
	padding: 10px;
}

#contact-info li,
#contact-info a {
	color: black;
	padding: 0px;
	display: block;
}

#contact-info {
	width: 100%;
	text-align: center;
	padding: 0;
}

footer p {
	color: white;
	padding-top: 10px;
	padding-bottom: 5px;
	padding-left: 5px;
}

/* Main div styling */

.main-content {
	width: 60%;
	margin: 15px auto;
	-webkit-box-shadow: 0px 0px 20px rgba(235, 235, 235, 0.75);
	-moz-box-shadow:    0px 0px 20px rgba(235, 235, 235, 0.75);
	box-shadow:         0px 0px 20px rgba(235, 235, 235, 0.75);
	max-width: 1006px;
	background: white;
}

/* Positioning images */

#logo {
	vertical-align: middle;
}

.pull-left {
	float: left;
}

.bottom-pic {
	width: 100%;
	height: 345px;
	background-repeat: no-repeat; 
	background-size: cover;
}

/* specifically index.shtml only */

.home-main {
	width:100%;
}

.column {
	width: 33.333333333333333%;
	float: left;
	height: 135px;
	border-bottom: 1px solid white;
	box-sizing: border-box;
}

.column h3 {
	color: white;
	text-align: center;
	padding-top: 3px;
}

.centered-h3 {
	padding-top: 20px;
	padding-bottom: 20px;
	text-align: center;
	font-size: 2em;

}

.column h4 {
	padding-top: 10px;
	font-size: 1.5em;
	color: black;
	text-align: center;

}

/* specifically menu.shtml only */

.food span {
	display: block;
	font-size: 1.1em;
}

.food {
	padding-bottom: 10px;
	padding-left: 10px;
	padding-right: 10px;
	color: white;
}

.food h4 {
	padding-bottom: 10px;
}

dl,
.food h5 {
	font-size: 1.1em;
	padding-left: 10px;
	line-height: 140%;
}

dt,
.pricing {
	color: black;
}

dd,
.food h5 {
	padding-left: 10px;
}

.pricing {
	padding-bottom: 20px;
	padding-left: 10px;
}

/* specifically about.shtml only */

.story-impact {
	padding-left: 10px;
	padding-right: 10px;
	text-align: justify;
}

.story-impact h4 {
	padding-bottom: 10px;
}

.story-impact h5 {
	font-size: 1.2em;
	padding-left: 15px;
	padding-right: 15px;
	line-height: 130%;
}

.story-impact h5:last-child {
	padding-bottom: 10px;
	text-align: center;
	font-size: 1.4em;
}

/* Specialized font sizes */

#small-pizza {
	font-size: 1em;
}

#med-pizza {
	font-size: 1.3em;
}

#big-pizza {
	font-size: 1.6em;
}

.bigwords {
	font-size: 1.4em;

}

/* Colorful blocks and pieces of text */

#meatpies,
#left {
	background: #FF2C00;
}

#vegpies,
#green {
	background: #34D800;
}

#drinks,
#middle {
	background: #0776A0;
}

#dessert {
	background: #FF8500;
}

.purple {
	color: #39275B;
}

#right {
	background: #84E900;
}

#pizza {
	color: #FF0000;
}

nav a:hover,
#contact-info a:last-child:hover,
#best,
.story-impact h5:last-child {
 	color: #D8AA03;
 }

